# D4BE-2-Social

./: .gitignore  Makefile  README.md  pyproject.toml
bookmarks/: logfile
bookmarks/account/: authentication.py  forms.py  models.py  urls.py  views.py
bookmarks/account/migrations/: 0001_initial.py  0002_contact.py
bookmarks/account/templates/: base.html
bookmarks/account/templates/account/: dashboard.html  register.html  register_done.html
bookmarks/account/templates/account/user/: detail.html  list.html
bookmarks/account/templates/registration/: login.html
bookmarks/actions/: models.py  utils.py
bookmarks/actions/migrations/: 0001_initial.py
bookmarks/actions/templates/actions/action/: detail.html
bookmarks/bookmarks/: settings.py  urls.py
bookmarks/images/: forms.py  models.py  urls.py  views.py
bookmarks/images/migrations/: 0001_initial.py  0002_image_total_likes_and_more.py
bookmarks/images/templates/images/image/: detail.html  list.html  list_images.html
bookmarks/images/templates/images/images/: create.html
